# dep-1

./: README.md  pylock.toml  pyproject.toml
src/dep_1/: __about__.py  __init__.py  main.py
