[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dep-1"
dynamic = ["version"]
description = 'Dependecy lvl 1'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Marcin r. Raba", email = "rabkins@me.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["dep-2==0.0.1"]

[project.urls]
Documentation = "https://github.com/Marcin r. Raba/dep-1#readme"
Issues = "https://github.com/Marcin r. Raba/dep-1/issues"
Source = "https://github.com/Marcin r. Raba/dep-1"

[tool.hatch.version]
path = "src/dep_1/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dep_1 tests}"

[tool.coverage.run]
source_pkgs = ["dep_1", "tests"]
branch = true
parallel = true
omit = ["src/dep_1/__about__.py"]

[tool.coverage.paths]
dep_1 = ["src/dep_1", "*/dep-1/src/dep_1"]
tests = ["tests", "*/dep-1/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.uv.sources]
dep-2 = { git = "https://github.com/rabkins/dep-2.git", rev = "v0.0.1" }
